add new player function
